<resources>
    <string name="app_name">Intents</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Регистрация</string>
    <string name="avatar">Аватарка</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="done">Готово</string>


</resources>